--- a/html/origen.html
+++ b/html/origen.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fanetix</title>
+    <title>Origen y Contextualización - Fanetix</title>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
     <header>
-        <h1>Fanetix</h1>
+        <h1>ORIGEN</h1>
         <nav>
             <ul>
                 <li><a href="inicio.html">Inicio</a></li>
@@ -22,16 +22,15 @@
             </ul>
         </nav>
     </header>
-   
+    
     <main>
-        <h2>BIENVENIDO A FANETIX</h2>
+        <h2>Bienvenido a Fanetix</h2>
         <p>Fanetix es una aplicación dedicada a la gestión de artistas, conciertos, productos y carritos de compra.</p>
         <p>Explora nuestras secciones para conocer más detalles sobre nuestro proyecto.</p>
     </main>
-   
+    
     <footer>
-        <p>no.replay.fanetix@gmail.com</p>
-        <p>&copy; 2025 por Fanetix creado con</p>
+        <p>&copy; 2025 Fanetix - Documentación</p>
     </footer>
 </body>
 </html>
