Pagina de origen y contexto de la web.

--- a/html/origen.html
+++ b/html/origen.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Origen y Contextualización - Fanetix</title>
+    <title>Origen y Contextualización</title>
     <link rel="stylesheet" href="../css/styles.css">
+    <link rel="icon" type="image/png" href="../imagenes/logo.png">
 </head>
+
 <body>
     <header>
-        <h1>ORIGEN</h1>
+        <h1>FANETIX</h1>
         <nav>
             <ul>
                 <li><a href="inicio.html">Inicio</a></li>
@@ -22,15 +25,25 @@
             </ul>
         </nav>
     </header>
-    
+
     <main>
-        <h2>Bienvenido a Fanetix</h2>
-        <p>Fanetix es una aplicación dedicada a la gestión de artistas, conciertos, productos y carritos de compra.</p>
-        <p>Explora nuestras secciones para conocer más detalles sobre nuestro proyecto.</p>
+        <img src="../imagenes/origen_contextualizacion.png" alt="Origen y Contextualización">
+        <p>La idea de Fanetix nació al identificar una necesidad clara entre los fans de la música: un espacio exclusivo
+            donde pudieran comprar y vender merchandising de sus artistas favoritos, estar al tanto de sus conciertos y
+            conocer más sobre ellos en un solo lugar.</p>
+        <p> Muchas plataformas ofrecen una parte de esta experiencia, pero ninguna las reúne de manera especializada.
+            Los fans suelen depender de múltiples sitios para conseguir merch, enterarse de giras o descubrir
+            curiosidades sobre sus ídolos. Fanetix viene a cambiar eso.</p>
+        <p>Nuestra aplicación fue concebida como un punto de encuentro para la comunidad musical, donde los seguidores
+            puedan no solo adquirir productos exclusivos, sino también estar siempre informados sobre los eventos y
+            novedades de sus artistas preferidos.</p>
+        <p>Con Fanetix, queremos hacer que la experiencia de ser fan sea más accesible, emocionante e interactiva que
+            nunca.</p>
     </main>
-    
+
     <footer>
         <p>&copy; 2025 Fanetix - Documentación</p>
     </footer>
 </body>
+
 </html>
