Modificando el diseño de la web; aun no he tocado el tema de las imagenes ni el contenido de las paginas de la web.

--- a/html/inicio.html
+++ b/html/inicio.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fanetix</title>
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="icon" type="image/png" href="../imagenes/logo.png">
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/aileron" type="text/css"/>
 </head>
+
 <body>
     <header>
-        <h1>Fanetix</h1>
+        <img src="../imagenes/fanetix.png" alt="Fanetix" class="titulo-img">
         <nav>
             <ul>
                 <li><a href="inicio.html">Inicio</a></li>
@@ -23,16 +26,43 @@
             </ul>
         </nav>
     </header>
-   
+
     <main>
         <h2>BIENVENIDO A FANETIX</h2>
-        <p>Fanetix es una aplicación dedicada a la gestión de artistas, conciertos, productos y carritos de compra.</p>
-        <p>Explora nuestras secciones para conocer más detalles sobre nuestro proyecto.</p>
+        <p>La siguiente página web está dedicada a la presentación de nuestro proyecto. Esta propuesta está dirigida a
+            crear una plataforma digital que conecte a los fans con la música y sus artistas favoritos.
+        </p>
+        <p>En Fanetix, los usuarios podrán acceder a contenido exclusivo de sus artistas favoritos, comprar productos
+            En este dosier se detalla cada aspecto del desarrollo del proyecto, explicando paso a paso cómo planeamos
+            llevar a cabo la idea, los recursos que utilizaremos, el seguimiento del proceso y la evaluación de los
+            resultados. Nuestro objetivo es ofrecer una solución que mejore la experiencia de los usuarios y fomente la
+            creación de una comunidad activa en torno a la música.
+        </p>
     </main>
-   
     <footer>
-        <p>no.replay.fanetix@gmail.com</p>
-        <p>&copy; 2025 por Fanetix creado con</p>
+        <div class="footer-container">
+            <!-- Información de contacto -->
+            <div class="footer-contact">
+                <h3>Contacto</h3>
+                <p><a href="https://www.google.com/maps?q=Tartanga+Kalea,+15,+48950+Altzaga,+Bizkaia,+España"
+                        target="_blank">Tartanga Kalea, 15, 48950 Altzaga, Bizkaia, España</a></p>
+                <p><a href="mailto:no.replay.fanetix@gmail.com">no.replay.fanetix@gmail.com</a></p>
+            </div>
+
+            <!-- Logo -->
+            <div class="footer-logo">
+                <a href="../imagenes/LogoFooter.png" target="_blank">
+                    <img src="../imagenes/LogoFooter.png" alt="Logo de Fanetix">
+                </a>
+            </div>
+
+            <!-- Derechos de autor y créditos -->
+            <div class="footer-rights">
+                <p>&copy; 2025 por Fanetix. Creado con Wix.com</p>
+                <p>Page designed by: Elbire, Irati, Olaia & Meylin</p>
+            </div>
+        </div>
     </footer>
 </body>
+
 </html>
