--- a/html/origen.html
+++ b/html/origen.html
@@ -7,11 +7,13 @@
     <title>Origen y Contextualización</title>
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="icon" type="image/png" href="../imagenes/logo.png">
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/aileron" type="text/css"/>
+
 </head>
 
 <body>
     <header>
-        <h1>FANETIX</h1>
+        <img src="../imagenes/fanetix.png" alt="Fanetix" class="titulo-img">
         <nav>
             <ul>
                 <li><a href="inicio.html">Inicio</a></li>
@@ -42,7 +44,28 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Fanetix - Documentación</p>
+        <div class="footer-container">
+            <!-- Información de contacto -->
+            <div class="footer-contact">
+                <h3>Contacto</h3>
+                <p><a href="https://www.google.com/maps?q=Tartanga+Kalea,+15,+48950+Altzaga,+Bizkaia,+España"
+                        target="_blank">Tartanga Kalea, 15, 48950 Altzaga, Bizkaia, España</a></p>
+                <p><a href="mailto:no.replay.fanetix@gmail.com">no.replay.fanetix@gmail.com</a></p>
+            </div>
+
+            <!-- Logo -->
+            <div class="footer-logo">
+                <a href="../imagenes/LogoFooter.png" target="_blank">
+                    <img src="../imagenes/LogoFooter.png" alt="Logo de Fanetix">
+                </a>
+            </div>
+
+            <!-- Derechos de autor y créditos -->
+            <div class="footer-rights">
+                <p>&copy; 2025 por Fanetix. Creado con Wix.com</p>
+                <p>Page designed by: Elbire, Irati, Olaia & Meylin</p>
+            </div>
+        </div>
     </footer>
 </body>
 
