Actualiza títulos de páginas y añade nuevas secciones para Tareas, Presupuesto, Recursos y Nosotros.

--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -4,11 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fanetix-Origen y Contextualización</title>
+    <title>Fanetix-Nosotros</title>
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="icon" type="image/png" href="../imagenes/logo.png">
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/aileron" type="text/css"/>
-
 </head>
 
 <body>
@@ -27,22 +26,17 @@
             </ul>
         </nav>
     </header>
-
     <main>
-        <img src="../imagenes/origen_contextualizacion.png" alt="Origen y Contextualización">
-        <p>La idea de Fanetix nació al identificar una necesidad clara entre los fans de la música: un espacio exclusivo
-            donde pudieran comprar y vender merchandising de sus artistas favoritos, estar al tanto de sus conciertos y
-            conocer más sobre ellos en un solo lugar.</p>
-        <p> Muchas plataformas ofrecen una parte de esta experiencia, pero ninguna las reúne de manera especializada.
-            Los fans suelen depender de múltiples sitios para conseguir merch, enterarse de giras o descubrir
-            curiosidades sobre sus ídolos. Fanetix viene a cambiar eso.</p>
-        <p>Nuestra aplicación fue concebida como un punto de encuentro para la comunidad musical, donde los seguidores
-            puedan no solo adquirir productos exclusivos, sino también estar siempre informados sobre los eventos y
-            novedades de sus artistas preferidos.</p>
-        <p>Con Fanetix, queremos hacer que la experiencia de ser fan sea más accesible, emocionante e interactiva que
-            nunca.</p>
+        <p>Somos un equipo de desarrollo de software con experiencia en la creación de aplicaciones multiplataforma.
+            Nuestro objetivo es utilizar nuestros conocimientos para crear soluciones tecnológicas que faciliten la
+            conexión entre los usuarios y sus intereses.
+            Contamos con experiencia en el diseño e implementación tanto de front-end como de back-end, lo que nos
+            permite abordar proyectos completos y entender cada una de las fases del desarrollo. A lo largo del proceso,
+            nos centramos en asegurar que todos los componentes trabajen de manera integrada y eficiente, buscando
+            siempre la mejor manera de cumplir con los objetivos establecidos y ofrecer una solución funcional dentro
+            del tiempo disponible.
+        </p>
     </main>
-
     <footer>
         <div class="footer-container">
             <!-- Información de contacto -->
@@ -68,5 +62,4 @@
         </div>
     </footer>
 </body>
-
 </html>
