--- a/html/tareas.html
+++ b/html/tareas.html
@@ -4,11 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fanetix-Origen y Contextualización</title>
+    <title>Fanetix-Tareas</title>
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="icon" type="image/png" href="../imagenes/logo.png">
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/aileron" type="text/css"/>
-
 </head>
 
 <body>
@@ -29,20 +28,8 @@
     </header>
 
     <main>
-        <img src="../imagenes/origen_contextualizacion.png" alt="Origen y Contextualización">
-        <p>La idea de Fanetix nació al identificar una necesidad clara entre los fans de la música: un espacio exclusivo
-            donde pudieran comprar y vender merchandising de sus artistas favoritos, estar al tanto de sus conciertos y
-            conocer más sobre ellos en un solo lugar.</p>
-        <p> Muchas plataformas ofrecen una parte de esta experiencia, pero ninguna las reúne de manera especializada.
-            Los fans suelen depender de múltiples sitios para conseguir merch, enterarse de giras o descubrir
-            curiosidades sobre sus ídolos. Fanetix viene a cambiar eso.</p>
-        <p>Nuestra aplicación fue concebida como un punto de encuentro para la comunidad musical, donde los seguidores
-            puedan no solo adquirir productos exclusivos, sino también estar siempre informados sobre los eventos y
-            novedades de sus artistas preferidos.</p>
-        <p>Con Fanetix, queremos hacer que la experiencia de ser fan sea más accesible, emocionante e interactiva que
-            nunca.</p>
-    </main>
 
+    </main>
     <footer>
         <div class="footer-container">
             <!-- Información de contacto -->
@@ -68,5 +55,4 @@
         </div>
     </footer>
 </body>
-
 </html>
