Modificacion sobre el diseño actual, además se agregaron las imagenes correspondientes a los títulos de cada pagina.

--- a/html/inicio.html
+++ b/html/inicio.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fanetix-Inicio</title>
     <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/inicioStyle.css">
     <link rel="icon" type="image/png" href="../imagenes/logo.png">
-    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/aileron" type="text/css"/>
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/aileron" type="text/css" />
 </head>
 
 <body>
@@ -38,14 +39,28 @@
             resultados. Nuestro objetivo es ofrecer una solución que mejore la experiencia de los usuarios y fomente la
             creación de una comunidad activa en torno a la música.
         </p>
+
+        <!-- NUEVO APARTADO DE CONTACTO -->
+        <section class="contact-section">
+            <div class="contact-container">
+                <div class="contact-info">
+                    <h3>Contacto</h3>
+                    <p><a href="https://www.google.com/maps?q=Tartanga+Kalea,+15,+48950+Altzaga,+Bizkaia,+España"
+                            target="_blank">
+                            Tartanga Kalea, 15, 48950 Altzaga, Bizkaia, España</a></p>
+                    <p><a href="mailto:no.replay.fanetix@gmail.com">no.replay.fanetix@gmail.com</a></p>
+                    <p><a href="tel:1234567890">123-456-7890</a></p>
+                </div>
+                <div class="contact-image">
+                    <img src="../imagenes/contacto.jfif" alt="Imagen de contacto">
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         <div class="footer-container">
             <!-- Información de contacto -->
             <div class="footer-contact">
-                <h3>Contacto</h3>
-                <p><a href="https://www.google.com/maps?q=Tartanga+Kalea,+15,+48950+Altzaga,+Bizkaia,+España"
-                        target="_blank">Tartanga Kalea, 15, 48950 Altzaga, Bizkaia, España</a></p>
                 <p><a href="mailto:no.replay.fanetix@gmail.com">no.replay.fanetix@gmail.com</a></p>
             </div>
 
@@ -58,7 +73,7 @@
 
             <!-- Derechos de autor y créditos -->
             <div class="footer-rights">
-                <p>&copy; 2025 por Fanetix. Creado con Wix.com</p>
+                <p>&copy; 2025 por Fanetix.</p>
                 <p>Page designed by: Elbire, Irati, Olaia & Meylin</p>
             </div>
         </div>
