--- a/html/objetivos.html
+++ b/html/objetivos.html
@@ -27,6 +27,7 @@
     </header>
     
     <main>
+        <img src="../imagenes/objetivos.png" alt="objetivos">
         <h3>OBJETIVO GENERAL DEL PROYECTO</h3>
         <p>Fanetix es la plataforma definitiva para los amantes de la música, un espacio donde podrán sumergirse en el mundo de sus artistas favoritos, descubrir conciertos y acceder a una amplia selección de productos exclusivos. Desde merchandising hasta discos, todo lo que un verdadero fanático necesita estará al alcance de su mano.</p>
 
@@ -49,9 +50,6 @@
         <div class="footer-container">
             <!-- Información de contacto -->
             <div class="footer-contact">
-                <h3>Contacto</h3>
-                <p><a href="https://www.google.com/maps?q=Tartanga+Kalea,+15,+48950+Altzaga,+Bizkaia,+España"
-                        target="_blank">Tartanga Kalea, 15, 48950 Altzaga, Bizkaia, España</a></p>
                 <p><a href="mailto:no.replay.fanetix@gmail.com">no.replay.fanetix@gmail.com</a></p>
             </div>
 
@@ -64,7 +62,7 @@
 
             <!-- Derechos de autor y créditos -->
             <div class="footer-rights">
-                <p>&copy; 2025 por Fanetix. Creado con Wix.com</p>
+                <p>&copy; 2025 por Fanetix.</p>
                 <p>Page designed by: Elbire, Irati, Olaia & Meylin</p>
             </div>
         </div>
