--- a/html/origen.html
+++ b/html/origen.html
@@ -29,7 +29,7 @@
     </header>
 
     <main>
-        <img src="../imagenes/origen_contextualizacion.png" alt="Origen y Contextualización">
+        <img src="../imagenes/origen.png" alt="Origen y Contextualización">
         <p>La idea de Fanetix nació al identificar una necesidad clara entre los fans de la música: un espacio exclusivo
             donde pudieran comprar y vender merchandising de sus artistas favoritos, estar al tanto de sus conciertos y
             conocer más sobre ellos en un solo lugar.</p>
@@ -47,9 +47,6 @@
         <div class="footer-container">
             <!-- Información de contacto -->
             <div class="footer-contact">
-                <h3>Contacto</h3>
-                <p><a href="https://www.google.com/maps?q=Tartanga+Kalea,+15,+48950+Altzaga,+Bizkaia,+España"
-                        target="_blank">Tartanga Kalea, 15, 48950 Altzaga, Bizkaia, España</a></p>
                 <p><a href="mailto:no.replay.fanetix@gmail.com">no.replay.fanetix@gmail.com</a></p>
             </div>
 
@@ -62,7 +59,7 @@
 
             <!-- Derechos de autor y créditos -->
             <div class="footer-rights">
-                <p>&copy; 2025 por Fanetix. Creado con Wix.com</p>
+                <p>&copy; 2025 por Fanetix.</p>
                 <p>Page designed by: Elbire, Irati, Olaia & Meylin</p>
             </div>
         </div>
