--- a/html/recursos.html
+++ b/html/recursos.html
@@ -27,6 +27,7 @@
         </nav>
     </header>
     <main>
+        <img src="../imagenes/Recursos.png" alt="Recursos">
         <p>Para llevar a cabo el desarrollo de este proyecto, será necesario contar con diversos recursos, tanto
             materiales
             como humanos. Estos recursos incluirán las herramientas y plataformas necesarias para la programación,
@@ -41,9 +42,6 @@
         <div class="footer-container">
             <!-- Información de contacto -->
             <div class="footer-contact">
-                <h3>Contacto</h3>
-                <p><a href="https://www.google.com/maps?q=Tartanga+Kalea,+15,+48950+Altzaga,+Bizkaia,+España"
-                        target="_blank">Tartanga Kalea, 15, 48950 Altzaga, Bizkaia, España</a></p>
                 <p><a href="mailto:no.replay.fanetix@gmail.com">no.replay.fanetix@gmail.com</a></p>
             </div>
 
@@ -56,7 +54,7 @@
 
             <!-- Derechos de autor y créditos -->
             <div class="footer-rights">
-                <p>&copy; 2025 por Fanetix. Creado con Wix.com</p>
+                <p>&copy; 2025 por Fanetix.</p>
                 <p>Page designed by: Elbire, Irati, Olaia & Meylin</p>
             </div>
         </div>
