--- a/html/seguimiento.html
+++ b/html/seguimiento.html
@@ -27,6 +27,7 @@
         </nav>
     </header>
     <main>
+        <img src="../imagenes/Seguimiento.png" alt="seguimiento">
         <h2>Seguimiento</h2>
         <p>
             Para llevar a cabo este proyecto, lo primero será consolidar la idea principal, definiendo claramente los
@@ -70,9 +71,6 @@
         <div class="footer-container">
             <!-- Información de contacto -->
             <div class="footer-contact">
-                <h3>Contacto</h3>
-                <p><a href="https://www.google.com/maps?q=Tartanga+Kalea,+15,+48950+Altzaga,+Bizkaia,+España"
-                        target="_blank">Tartanga Kalea, 15, 48950 Altzaga, Bizkaia, España</a></p>
                 <p><a href="mailto:no.replay.fanetix@gmail.com">no.replay.fanetix@gmail.com</a></p>
             </div>
 
@@ -85,7 +83,7 @@
 
             <!-- Derechos de autor y créditos -->
             <div class="footer-rights">
-                <p>&copy; 2025 por Fanetix. Creado con Wix.com</p>
+                <p>&copy; 2025 por Fanetix.</p>
                 <p>Page designed by: Elbire, Irati, Olaia & Meylin</p>
             </div>
         </div>
