--- a/html/tareas.html
+++ b/html/tareas.html
@@ -28,15 +28,12 @@
     </header>
 
     <main>
-
+        <img src="../imagenes/Cronograma .png" alt="Cronograma">
     </main>
     <footer>
         <div class="footer-container">
             <!-- Información de contacto -->
             <div class="footer-contact">
-                <h3>Contacto</h3>
-                <p><a href="https://www.google.com/maps?q=Tartanga+Kalea,+15,+48950+Altzaga,+Bizkaia,+España"
-                        target="_blank">Tartanga Kalea, 15, 48950 Altzaga, Bizkaia, España</a></p>
                 <p><a href="mailto:no.replay.fanetix@gmail.com">no.replay.fanetix@gmail.com</a></p>
             </div>
 
@@ -49,7 +46,7 @@
 
             <!-- Derechos de autor y créditos -->
             <div class="footer-rights">
-                <p>&copy; 2025 por Fanetix. Creado con Wix.com</p>
+                <p>&copy; 2025 por Fanetix.</p>
                 <p>Page designed by: Elbire, Irati, Olaia & Meylin</p>
             </div>
         </div>
