--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -7,7 +7,7 @@
     <title>Fanetix-Nosotros</title>
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="icon" type="image/png" href="../imagenes/logo.png">
-    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/aileron" type="text/css"/>
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/aileron" type="text/css" />
 </head>
 
 <body>
@@ -27,6 +27,7 @@
         </nav>
     </header>
     <main>
+        <img src="../imagenes/nosotros.png" alt="Nosotros">
         <p>Somos un equipo de desarrollo de software con experiencia en la creación de aplicaciones multiplataforma.
             Nuestro objetivo es utilizar nuestros conocimientos para crear soluciones tecnológicas que faciliten la
             conexión entre los usuarios y sus intereses.
@@ -41,9 +42,6 @@
         <div class="footer-container">
             <!-- Información de contacto -->
             <div class="footer-contact">
-                <h3>Contacto</h3>
-                <p><a href="https://www.google.com/maps?q=Tartanga+Kalea,+15,+48950+Altzaga,+Bizkaia,+España"
-                        target="_blank">Tartanga Kalea, 15, 48950 Altzaga, Bizkaia, España</a></p>
                 <p><a href="mailto:no.replay.fanetix@gmail.com">no.replay.fanetix@gmail.com</a></p>
             </div>
 
@@ -56,10 +54,11 @@
 
             <!-- Derechos de autor y créditos -->
             <div class="footer-rights">
-                <p>&copy; 2025 por Fanetix. Creado con Wix.com</p>
+                <p>&copy; 2025 por Fanetix.</p>
                 <p>Page designed by: Elbire, Irati, Olaia & Meylin</p>
             </div>
         </div>
     </footer>
 </body>
+
 </html>
