Contenido de la pagina de Recursos y algunas modificaciones de diseño en el estilo general de la pagina web.

--- a/html/inicio.html
+++ b/html/inicio.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="../css/inicioStyle.css">
     <link rel="icon" type="image/png" href="../imagenes/logo.png">
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/aileron" type="text/css" />
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/now" type="text/css"/>
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/youngserif" type="text/css"/>
 </head>
 
 <body>
@@ -44,7 +46,7 @@
         <section class="contact-section">
             <div class="contact-container">
                 <div class="contact-info">
-                    <h3>Contacto</h3>
+                    <h3>CONTACTO</h3>
                     <p><a href="https://www.google.com/maps?q=Tartanga+Kalea,+15,+48950+Altzaga,+Bizkaia,+España"
                             target="_blank">
                             Tartanga Kalea, 15, 48950 Altzaga, Bizkaia, España</a></p>
