--- a/html/objetivos.html
+++ b/html/objetivos.html
@@ -6,7 +6,9 @@
     <title>Fanetix-Objetivos</title>
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="icon" type="image/png" href="../imagenes/logo.png">
-    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/aileron" type="text/css"/>
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/aileron" type="text/css" />
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/now" type="text/css"/>
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/youngserif" type="text/css"/>
 
 </head>
 <body>
@@ -36,6 +38,7 @@
         <p>Para garantizar un catálogo siempre actualizado y relevante, los administradores contarán con herramientas avanzadas de gestión, con las cuales podrán agregar, modificar o eliminar artistas, conciertos y productos según sea necesario.</p>
         
         <h3>OBJETIVOS ESPECÍFICOS</h3>
+        
         <p>Fanetix será una aplicación de escritorio que almacenará y gestionará los datos de los usuarios, artistas, conciertos y productos en una base de datos relacional. La aplicación contará con una interfaz gráfica moderna e intuitiva para ofrecer una experiencia de usuario cómoda y eficiente.</p>
 
         <p>Habrá dos niveles de usuario en la aplicación: el usuario estándar y el administrador. Los usuarios estándar podrán explorar artistas, productos y conciertos, realizar compras y gestionar su historial de compras. Mientras tanto, el administrador tendrá acceso a funcionalidades adicionales, como la gestión de artistas, conciertos y productos dentro de la aplicación.</p>
