--- a/html/origen.html
+++ b/html/origen.html
@@ -7,7 +7,9 @@
     <title>Fanetix-Origen y Contextualización</title>
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="icon" type="image/png" href="../imagenes/logo.png">
-    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/aileron" type="text/css"/>
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/aileron" type="text/css" />
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/now" type="text/css"/>
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/youngserif" type="text/css"/>
 
 </head>
 
