--- a/html/seguimiento.html
+++ b/html/seguimiento.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="icon" type="image/png" href="../imagenes/logo.png">
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/aileron" type="text/css" />
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/now" type="text/css"/>
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/youngserif" type="text/css"/>
 </head>
 
 <body>
@@ -28,7 +30,7 @@
     </header>
     <main>
         <img src="../imagenes/Seguimiento.png" alt="seguimiento">
-        <h2>Seguimiento</h2>
+        <h3>Seguimiento</h3>
         <p>
             Para llevar a cabo este proyecto, lo primero será consolidar la idea principal, definiendo claramente los
             objetivos y las funcionalidades clave. Dado que se trata de un trabajo en equipo, el plan será dividir las
@@ -49,7 +51,7 @@
             manera colaborativa. El progreso será actualizado regularmente en las herramientas mencionadas, lo que
             permitirá ajustar el flujo de trabajo y las prioridades según las necesidades del proyecto.
         </p>
-        <h2>Evaluación</h2>
+        <h3>Evaluación</h3>
         <p>
             Para asegurarnos de que el software cumpla con lo que esperamos, vamos a hacer una evaluación continua
             durante todo el desarrollo. Esto incluye revisar el código y comprobar que la aplicación funcione
