--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="icon" type="image/png" href="../imagenes/logo.png">
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/aileron" type="text/css" />
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/now" type="text/css"/>
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/youngserif" type="text/css"/>
 </head>
 
 <body>
