--- a/html/recursos.html
+++ b/html/recursos.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fanetix-Recursos</title>
     <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/recursosStyle.css">
     <link rel="icon" type="image/png" href="../imagenes/logo.png">
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/aileron" type="text/css" />
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/now" type="text/css"/>
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/youngserif" type="text/css"/>
 </head>
 
 <body>
@@ -29,14 +32,85 @@
     <main>
         <img src="../imagenes/Recursos.png" alt="Recursos">
         <p>Para llevar a cabo el desarrollo de este proyecto, será necesario contar con diversos recursos, tanto
-            materiales
-            como humanos. Estos recursos incluirán las herramientas y plataformas necesarias para la programación,
-            gestión
-            del proyecto y colaboración en equipo, así como la distribución de tareas entre los miembros del grupo. A
+            materiales como humanos.</p>
+        <p> Estos recursos incluirán las herramientas y plataformas necesarias para la programación, gestión del
+            proyecto y colaboración en equipo, así como la distribución de tareas entre los miembros del grupo. A
             continuación, se detallarán los recursos específicos que utilizaremos para asegurar un desarrollo eficiente
-            y
-            organizado de la aplicación.
-        </p>
+            y organizado de la aplicación.</p>
+        <!-- Imágenes de las tablas de recursos -->
+        <h3>RECURSOS HUMANOS</h3>
+        <div class="table-container">
+            <div class="row header">
+                <div class="cell-header">RECURSO</div>
+                <div class="cell-header">PRECIO €/H</div>
+            </div>
+            <div class="row">
+                <div class="cell">Analista</div>
+                <div class="cell">40€/h</div>
+            </div>
+            <div class="row">
+                <div class="cell">Diseñador Gráfico</div>
+                <div class="cell">25€/h</div>
+            </div>
+            <div class="row">
+                <div class="cell">Programador Junior 1</div>
+                <div class="cell">15€/h</div>
+            </div>
+            <div class="row">
+                <div class="cell">Programador Junior 2</div>
+                <div class="cell">15€/h</div>
+            </div>
+            <div class="row">
+                <div class="cell">Programador Junior 3</div>
+                <div class="cell">15€/h</div>
+            </div>
+            <div class="row">
+                <div class="cell">Programador Junior 4</div>
+                <div class="cell">15€/h</div>
+            </div>
+            <div class="row">
+                <div class="cell">Quality Assurance Tester</div>
+                <div class="cell">20€/h</div>
+            </div>
+        </div>
+        <h3>RECURSOS MATERIALES</h3>
+        <div class="table-container">
+            <div class="row header">
+                <div class="cell-header">RECURSO</div>
+                <div class="cell-header">MEDIO</div>
+                <div class="cell-header">PRECIO</div>
+            </div>
+            <div class="row">
+                <div class="cell">Diseño de diagramas</div>
+                <div class="cell">Drawio</div>
+                <div class="cell">40€/h</div>
+            </div>
+            <div class="row">
+                <div class="cell">Repositorio Online</div>
+                <div class="cell">Github</div>
+                <div class="cell">25€/h</div>
+            </div>
+            <div class="row">
+                <div class="cell">IDE</div>
+                <div class="cell">Netbeans</div>
+                <div class="cell">15€/h</div>
+            </div>
+            <div class="row">
+                <div class="cell">Almacenamiento</div>
+                <div class="cell">MySQL</div>
+                <div class="cell">15€/h</div>
+            </div>
+            <div class="row">
+                <div class="cell">Lenguaje de programación</div>
+                <div class="cell">Java</div>
+                <div class="cell">15€/h</div>
+            </div>
+            <div class="row">
+                <div class="cell">Documentación y colaboración</div>
+                <div class="cell">Drive</div>
+                <div class="cell">15€/h</div>
+            </div>
+        </div>
     </main>
     <footer>
         <div class="footer-container">
