BPMN diagramm added to seguimiento.html

--- a/html/seguimiento.html
+++ b/html/seguimiento.html
@@ -68,6 +68,11 @@
             encontrando y ayudarnos mutuamente a resolver cualquier problema. Este enfoque nos ayudará a mejorar
             continuamente el proyecto y asegurarnos de que el producto final sea de buena calidad.
         </p>
+        <h3>Diagrama BPMN</h3>
+        <p>
+            A continuación se presenta el diagrama BPMN que ilustra los procedimientos de seguimiento y evaluación del proyecto. Este diagrama ayuda a visualizar y entender mejor el flujo de actividades y la coordinación entre los diferentes miembros del equipo.
+        </p>
+        <img src="../imagenes/BPMNFanetix.png" alt="Diagrama BPMN de Fanetix">
     </main>
     <footer>
         <div class="footer-container">
