--- a/html/tareas.html
+++ b/html/tareas.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fanetix-Tareas</title>
     <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/tareasStyle.css">
+    <link rel="stylesheet" href="../css/cronogramaStyle.css">
     <link rel="icon" type="image/png" href="../imagenes/logo.png">
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/aileron" type="text/css" />
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/now" type="text/css"/>
@@ -30,7 +32,35 @@
     </header>
 
     <main>
-        <img src="../imagenes/Cronograma .png" alt="Cronograma">
+        <img src="../imagenes/Tareas.png" alt="Cronograma">
+        <h3>PLANIFICACION DE TAREAS</h3>
+        <table class="tabla-tareas">
+            <tr>
+                <th>ID</th>
+                <th>NOMBRE</th>
+                <th>DESCRIPCIÓN</th>
+                <th>INICIO</th>
+                <th>FIN</th>
+                <th>TRABAJO</th>
+                <th>COSTE</th>
+                <th>ENCARGADOS</th>
+            </tr>
+            <tr class="fase fase-1"><td colspan="8">FASE 1: Planificación y Análisis (18/11/2024 - 30/11/2024)</td></tr>
+            <tr><td>1</td><td>Planificación del proyecto</td><td>Definir objetivos, metodología y herramientas</td><td>18/11/2024</td><td>19/11/2024</td><td>2d</td><td>40€/h</td><td>Analista</td></tr>
+            <tr><td>2</td><td>Especificación de requisitos</td><td>Documentación de requerimientos funcionales y no funcionales</td><td>20/11/2024</td><td>24/11/2024</td><td>4d</td><td>40€/h</td><td>Analista</td></tr>
+            <tr class="fase fase-2"><td colspan="8">FASE 2: Diseño (01/12/2024 - 13/12/2024)</td></tr>
+            <tr><td>6</td><td>Diseño de la arquitectura</td><td>Estructura del sistema (Módulos, APIs)</td><td>01/12/2024</td><td>05/12/2024</td><td>5d</td><td>15€/h</td><td>FullStack</td></tr>
+            <tr class="fase fase-3"><td colspan="8">FASE 3: Desarrollo (14/12/2024 - 12/01/2025)</td></tr>
+            <tr><td>10</td><td>Configuración del entorno</td><td>Instalación de herramientas y frameworks</td><td>14/12/2024</td><td>14/12/2024</td><td>1d</td><td>15€/h</td><td>FullStack</td></tr>
+            <tr class="fase fase-4"><td colspan="8">FASE 4: Integración (13/01/2025 - 20/01/2025)</td></tr>
+            <tr><td>17</td><td>Revisión de implementaciones</td><td>Verificación de cada módulo</td><td>13/01/2025</td><td>16/01/2025</td><td>4d</td><td>15€/h</td><td>FullStack</td></tr>
+            <tr class="fase fase-5"><td colspan="8">FASE 5: Pruebas y Corrección (21/01/2025 - 05/02/2025)</td></tr>
+            <tr><td>19</td><td>Pruebas del backend</td><td>Testeo de API y base de datos</td><td>21/01/2025</td><td>25/01/2025</td><td>5d</td><td>20€/h</td><td>QA</td></tr>
+            <tr class="fase fase-6"><td colspan="8">FASE 6: Documentación y Despliegue (04/02/2025 - 07/02/2025)</td></tr>
+            <tr><td>24</td><td>Manual de usuario</td><td>Creación de guías de uso</td><td>04/02/2025</td><td>07/02/2025</td><td>4d</td><td>15€/h</td><td>FullStack</td></tr>
+        </table>
+        <h3>CRONOGRAMA</h3>
+        <img src="../imagenes/Cronograma.png" alt="Cronograma" class="imagen-cronograma">
     </main>
     <footer>
         <div class="footer-container">
