Modificando la tabla de cronograma.

--- a/html/tareas.html
+++ b/html/tareas.html
@@ -7,7 +7,6 @@
     <title>Fanetix-Tareas</title>
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/tareasStyle.css">
-    <link rel="stylesheet" href="../css/cronogramaStyle.css">
     <link rel="icon" type="image/png" href="../imagenes/logo.png">
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/aileron" type="text/css" />
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/now" type="text/css"/>
@@ -60,7 +59,161 @@
             <tr><td>24</td><td>Manual de usuario</td><td>Creación de guías de uso</td><td>04/02/2025</td><td>07/02/2025</td><td>4d</td><td>15€/h</td><td>FullStack</td></tr>
         </table>
         <h3>CRONOGRAMA</h3>
-        <img src="../imagenes/Cronograma.png" alt="Cronograma" class="imagen-cronograma">
+        <h4> Noviembre</h4>
+        <table class="cronograma">
+            <tr>
+                <th rowspan="2" class="header">Tarea</th>
+                <th rowspan="2" class="header">Días</th>
+                <th colspan="13" class="mes-header-morado">Noviembre</th>
+            </tr>
+            <tr>
+                <th class="dia-header-morado">18</th>
+                <th class="dia-header-morado">19</th>
+                <th class="dia-header-morado">20</th>
+                <th class="dia-header-morado">21</th>
+                <th class="dia-header-morado">22</th>
+                <th class="dia-header-morado">23</th>
+                <th class="dia-header-morado">24</th>
+                <th class="dia-header-morado">25</th>
+                <th class="dia-header-morado">26</th>
+                <th class="dia-header-morado">27</th>
+                <th class="dia-header-morado">28</th>
+                <th class="dia-header-morado">29</th>
+                <th class="dia-header-morado">30</th>
+            </tr>
+            <tr>
+                <td>Planificación del proyecto</td>
+                <td>2</td>
+                <td colspan="2" class="dia-morado"></td>
+                <td colspan="11" class="dia-blanco"></td>
+                
+            </tr>
+            <tr>
+                <td>Especificación de requisitos</td>
+                <td>5</td>
+                <td colspan="2" class="dia-blanco"></td>
+                <td colspan="5" class="dia-morado"></td>
+                <td colspan="6" class="dia-blanco"></td>
+            </tr>
+            <tr>
+                <td>Análisis del Modelo de Datos</td>
+                <td>4</td>
+                <td colspan="7" class="dia-blanco"></td>
+                <td colspan="4" class="dia-morado"></td>
+                <td colspan="2" class="dia-blanco"></td>
+            </tr>
+            <tr>
+                <td>Análisis del Modelo de Casos de Uso</td>
+                <td>2</td>
+                <td colspan="7" class="dia-blanco"></td>
+                <td colspan="2" class="dia-morado"></td>
+                <td colspan="4"class="dia-blanco"></td>
+            </tr>
+            <tr>
+                <td>Revisión Final del Análisis</td>
+                <td>4</td>
+                <td colspan="9" class="dia-blanco"></td>
+                <td colspan="4" class="dia-morado"></td>
+            </tr>
+        </table>
+        <h4> Diciembre</h4>
+        <table class="cronograma">
+            <tr>
+                <th rowspan="2" class="header">Tarea</th>
+                <th rowspan="2" class="header">Días</th>
+                <th colspan="31" class="mes-header-amarillo">Diciembre</th>
+            </tr>
+            <tr>
+                <th class="dia-header-amarillo">1</th>
+                <th class="dia-header-amarillo">2</th>
+                <th class="dia-header-amarillo">3</th>
+                <th class="dia-header-amarillo">4</th>
+                <th class="dia-header-amarillo">5</th>
+                <th class="dia-header-amarillo">6</th>
+                <th class="dia-header-amarillo">7</th>
+                <th class="dia-header-amarillo">8</th>
+                <th class="dia-header-amarillo">9</th>
+                <th class="dia-header-amarillo">10</th>
+                <th class="dia-header-amarillo">11</th>
+                <th class="dia-header-amarillo">12</th>
+                <th class="dia-header-amarillo">13</th>
+                <th class="dia-header-amarillo">14</th>
+                <th class="dia-header-amarillo">15</th>
+                <th class="dia-header-amarillo">16</th>
+                <th class="dia-header-amarillo">17</th>
+                <th class="dia-header-amarillo">18</th>
+                <th class="dia-header-amarillo">19</th>
+                <th class="dia-header-amarillo">20</th>
+                <th class="dia-header-amarillo">21</th>
+                <th class="dia-header-amarillo">22</th>
+                <th class="dia-header-amarillo">23</th>
+                <th class="dia-header-amarillo">24</th>
+                <th class="dia-header-amarillo">25</th>
+                <th class="dia-header-amarillo">26</th>
+                <th class="dia-header-amarillo">27</th>
+                <th class="dia-header-amarillo">28</th>
+                <th class="dia-header-amarillo">29</th>
+                <th class="dia-header-amarillo">30</th>
+                <th class="dia-header-amarillo">31</th>
+            </tr>
+            <tr>
+                <td>Diseño de la arquitectura</td>
+                <td>5</td>
+                <td colspan="5"  class="dia-amarillo"></td>
+                <td colspan="26" class="dia-blanco"></td>
+            </tr>
+            <tr>
+                <td>Diseño de la base de datos</td>
+                <td>4</td>
+                <td colspan="5" class="dia-blanco"></td>
+                <td colspan="4"  class="dia-amarillo"></td>
+                <td colspan="22" class="dia-blanco"></td>
+            </tr>
+            <tr>
+                <td>Diseño de la UI/UX</td>
+                <td>5</td>
+                <td colspan="5" class="dia-blanco"></td>
+                <td colspan="5"  class="dia-amarillo"></td>
+                <td colspan="21" class="dia-blanco"></td>
+            </tr>
+            <tr>
+                <td>Revisión del Diseño</td>
+                <td>3</td>
+                <td colspan="10" class="dia-blanco"></td>
+                <td colspan="3"  class="dia-amarillo"></td>
+                <td colspan="18" class="dia-blanco"></td>
+            </tr>
+            <tr>
+                <td>Configuración del Entorno</td>
+                <td>1</td>
+                <td colspan="13" class="dia-blanco"></td>
+                <td colspan="1"  class="dia-amarillo"></td>
+                <td colspan="17" class="dia-blanco"></td>
+            </tr>
+            <tr>
+                <td>Desarrollo Clases JPA</td>
+                <td>7</td>
+                <td colspan="14" class="dia-blanco"></td>
+                <td colspan="7"  class="dia-amarillo"></td>
+                <td colspan="10" class="dia-blanco"></td>
+            </tr>
+            <tr>
+                <td>Desarrollo REST API</td>
+                <td>10</td>
+                <td colspan="21" class="dia-blanco"></td>
+                <td colspan="10"  class="dia-amarillo"></td>  
+            </tr>
+            <tr>
+                <td>Desarrollo de la UI</td>
+                <td>10</td>
+                <td colspan="21" class="dia-blanco"></td>
+                <td colspan="10"  class="dia-amarillo"></td>
+            </tr>
+        </table>
+        <h4> Enero</h4>
+        <img src="../imagenes/CronogramaEnero.png" alt="Cronograma_Enero_2025" class="imagen-cronograma">
+        <h4> Febrero</h4>
+        <img src="../imagenes/CronogramaFebrero.png" alt="Cronograma_Febrero_2024" class="imagen-cronograma">
     </main>
     <footer>
         <div class="footer-container">
