--- a/html/recursos.html
+++ b/html/recursos.html
@@ -22,8 +22,9 @@
                 <li><a href="nosotros.html">Nosotros</a></li>
                 <li><a href="origen.html">Origen y Contextualización</a></li>
                 <li><a href="objetivos.html">Objetivos</a></li>
+                <li><a href="analisis.html">Análisis</a></li>
                 <li><a href="tareas.html">Tareas y Cronograma</a></li>
-                <li><a href="recursos.html">Recursos</a></li>
+                <li><a href="recursos.html" class="active">Recursos</a></li>
                 <li><a href="presupuesto.html">Presupuesto</a></li>
                 <li><a href="seguimiento.html">Seguimiento y Evaluación</a></li>
             </ul>
@@ -121,15 +122,12 @@
 
             <!-- Logo -->
             <div class="footer-logo">
-                <a href="../imagenes/LogoFooter.png" target="_blank">
-                    <img src="../imagenes/LogoFooter.png" alt="Logo de Fanetix">
-                </a>
+                <img src="../imagenes/LogoFooter.png" alt="Logo de Fanetix">
             </div>
 
             <!-- Derechos de autor y créditos -->
             <div class="footer-rights">
-                <p>&copy; 2025 por Fanetix.</p>
-                <p>Page designed by: Elbire, Irati, Olaia & Meylin</p>
+                <p>Página diseñada por: Elbire, Irati, Olaia & Meylin<br>&copy; 2025 por Fanetix.</p>
             </div>
         </div>
     </footer>
