info de la pestaña de analisis (falta analisis de la app)

--- a/html/seguimiento.html
+++ b/html/seguimiento.html
@@ -31,7 +31,7 @@
     </header>
     <main>
         <img src="../imagenes/Seguimiento.png" alt="seguimiento">
-        <h3>Seguimiento</h3>
+        <h3>SEGUIMIENTO</h3>
         <p>
             Para llevar a cabo este proyecto, lo primero será consolidar la idea principal, definiendo claramente los
             objetivos y las funcionalidades clave. Dado que se trata de un trabajo en equipo, el plan será dividir las
