--- a/html/presupuesto.html
+++ b/html/presupuesto.html
@@ -32,7 +32,7 @@
 
     <main>
         <img src="../imagenes/Presupuesto.png" alt="Presupuesto">
-        <h3>PRESUPUESTO GENERAL</h3>
+        <h3>PRESUPUESTO GENERAL</h3></br>
         <div class="presupuesto-general">
             <img src="../imagenes/PRESUPUESTO GENERAL.png" alt="Presupuesto">
         </div>
@@ -40,7 +40,7 @@
             <img src="../imagenes/2.png" alt="Presupuesto">
         </div>
         <div class="presupuesto-materiales"></div>
-            <h3>PRESUPUESTO MATERIAL</h3>
+            <h3>PRESUPUESTO MATERIAL</h3></br>
             <img src="../imagenes/MATERIAL.png" alt="Presupuesto">
         </div>
     </main>
