pequeños cambios del TO-DO hechos

--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -39,7 +39,17 @@
             nos centramos en asegurar que todos los componentes trabajen de manera integrada y eficiente, buscando
             siempre la mejor manera de cumplir con los objetivos establecidos y ofrecer una solución funcional dentro
             del tiempo disponible.
-        </p>
+        </p></br>
+
+        <iframe 
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2903.8399891716626!2d-2.8709806240029185!3d43.29997877112212!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd4e45f6e06a646b%3A0x63835f7df7d4826a!2sBic%20Bizkaia!5e0!3m2!1ses!2ses!4v1714824143023!5m2!1ses!2ses" 
+            width="800" 
+            height="350" 
+            style="border:0; border-radius: 15px;"  
+            allowfullscreen="" 
+            loading="lazy" 
+            referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
     </main>
     <footer>
         <div class="footer-container">
@@ -50,7 +60,9 @@
 
             <!-- Logo -->
             <div class="footer-logo">
-                <img src="../imagenes/LogoFooter.png" alt="Logo de Fanetix">
+                <a href="inicio.html">
+                    <img src="../imagenes/LogoFooter.png" alt="Logo de Fanetix">
+                </a>
             </div>
 
             <!-- Derechos de autor y créditos -->
