--- a/html/tareas.html
+++ b/html/tareas.html
@@ -543,7 +543,9 @@
 
             <!-- Logo -->
             <div class="footer-logo">
-                <img src="../imagenes/LogoFooter.png" alt="Logo de Fanetix">
+                <a href="inicio.html">
+                    <img src="../imagenes/LogoFooter.png" alt="Logo de Fanetix">
+                </a>
             </div>
 
             <!-- Derechos de autor y créditos -->
