--- a/html/analisis.html
+++ b/html/analisis.html
@@ -33,6 +33,23 @@
         <img src="../imagenes/analisis.png" alt="Análisis">
         <h3>ANÁLISIS COMPLETO DE LA APLICACIÓN</h3></br>
         <h3>DEFINICIÓN DEL SISTEMA</h3></br>
+        <p>
+            Fanetix es una aplicación móvil orientada a los fans de la música, que centraliza contenido exclusivo de artistas, venta de merchandising oficial y actualizaciones sobre conciertos y eventos. 
+            El sistema está diseñado como un espacio integral donde los seguidores puedan interactuar con todo lo relacionado a sus ídolos sin tener que recurrir a múltiples plataformas.
+        </p><br>
+        <h3>Descripción funcional</h3>
+        <ul>
+        <li>Acceso a contenido exclusivo de artistas (noticias, videos, publicaciones especiales).</li>
+        <li>Compra y venta de productos de merchandising oficial y de segunda mano.</li>
+        <li>Perfil personalizado para el usuario y opción de seguir a sus artistas favoritos.</li>
+        <li>Creación de una comunidad de fans mediante interacción con publicaciones y foros.</li>
+        </ul><br>
+        <h3>Identificación de usuarios</h3>
+        <ul>
+        <li><strong>Fans de la música:</strong> Usuarios principales, interesados en comprar merch, seguir artistas y participar en la comunidad.</li>
+        <li><strong>Artistas y representantes:</strong> Encargados de subir contenido exclusivo, anunciar eventos y vender merchandising oficial.</li>
+        <li><strong>Administradores:</strong> Responsables del mantenimiento del sistema, moderación del contenido y gestión de usuarios y productos.</li>
+        </ul>
         <h3>ESPECIFICACIÓN DE CASOS DE USO</h3>
         <img src="../imagenes/casos_de_uso.png" alt="Fanetix" class="titulo-img"></br></br>
 
